--- a/code/ManhattanRule_phase1-Copy1.ipynb
+++ b/code/ManhattanRule_phase1-Copy1.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 0.4648690186590721\n",
-      "test loss 0.4427833321509682\n",
-      "train accuracy 0.8592592592592593\n",
-      "test accuracy 0.8666666666666667\n"
+      "train loss 0.25145218421770543\n",
+      "test loss 0.2324880646930986\n",
+      "train accuracy 0.9629629629629629\n",
+      "test accuracy 1.0\n"
      ]
     }
    ],
@@ -58,8 +58,6 @@
     "\n",
     "model = nn_modules.base_net().double()\n",
     "\n",
-    "#model summary\n",
-    "\n",
     "#binary cross entropy loss\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "#optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
@@ -84,7 +82,7 @@
     "        \n",
     "        model.zero_grad()\n",
     "        loss.backward()\n",
-    "        model.fc.weight.data -= 0.005*model.fc.weight.grad\n",
+    "        model.fc.weight.data -= 0.005*np.sign(model.fc.weight.grad)\n",
     "        \n",
     "        train_loss.append(loss.item())\n",
     "\n",
@@ -96,7 +94,7 @@
     "        test_loss.append(criterion(out,y_test).item())\n",
     "        _, predicted = torch.max(out.data, 1)\n",
     "        test_acc.append((predicted == y_test).sum().item()/y_test.size(0))\n",
-    "\n",
+    "        \n",
     "print('train loss', train_loss[-1])        \n",
     "print('test loss', test_loss[-1])\n",
     "print('train accuracy', train_acc[-1])\n",
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +131,7 @@
    "source": [
     "%matplotlib\n",
     "from scipy import signal\n",
-    "N=11\n",
+    "N=13\n",
     "plt.plot(signal.filtfilt(np.ones([N])/N,1,train_acc))\n",
     "plt.plot(signal.filtfilt(np.ones([N])/N,1,test_acc))\n",
     "plt.title('Accuracy')\n",
@@ -143,17 +141,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt5Agg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\signal\\_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  b = a[a_slice]\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\signal\\signaltools.py:1341: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  out_full[ind] += zi\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\signal\\signaltools.py:1344: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  out = out_full[ind]\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\signal\\signaltools.py:1350: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  zf = out_full[ind]\n"
+     ]
+    }
+   ],
    "source": [
+    "%matplotlib\n",
     "from scipy import signal\n",
-    "N=11\n",
+    "N=31\n",
     "plt.plot(signal.filtfilt(np.ones([N])/N,1,train_loss))\n",
     "plt.plot(signal.filtfilt(np.ones([N])/N,1,test_loss))\n",
     "plt.title('Loss')\n",
     "plt.legend({'train','test'})\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 0, 2, 0, 1, 2, 0, 1, 2, 2, 0, 1, 0, 2])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 1, 2, 1, 0, 0, 2, 2, 2, 2, 1, 2, 0, 0, 0, 1, 1, 0, 1, 2, 2, 1, 2, 2,\n",
+       "        0, 1, 2, 0, 0, 0, 2, 1, 0, 1, 0, 1, 2, 1, 0, 0, 0, 2, 2, 1, 2, 0, 2, 0,\n",
+       "        1, 1, 2, 1, 0, 0, 2, 0, 0, 1, 2, 2, 1, 0, 0, 1, 2, 2, 0, 0, 2, 2, 2, 1,\n",
+       "        1, 2, 1, 2, 0, 0, 1, 2, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 2, 2, 1, 1, 1, 2,\n",
+       "        1, 0, 1, 2, 0, 0, 1, 0, 2, 2, 2, 1, 1, 2, 0, 0, 1, 0, 1, 2, 2, 1, 0, 2,\n",
+       "        2, 1, 1, 0, 0, 1, 2, 2, 0, 0, 1, 0, 1, 2, 1])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
    ]
   },
   {
