--- a/main.lyx
+++ b/main.lyx
@@ -887,12 +887,84 @@ name "fig:פירוט-אלגוריתם-מנהטן"
  בעת שמאמנים את הרשת.
 \end_layout
 
+\begin_layout Standard
+** להוסיף שנדרשנו לעבוד על רשת קטנה**
+\end_layout
+
 \begin_layout Section
 תכן תוכנה
 \end_layout
 
 \begin_layout Section
+תוצאות
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
 בעיות ופתרונות
+\end_layout
+
+\begin_layout Standard
+במהלך עבודתנו נתקלנו בקשיים מורכבים הנובעים בין היתר מכיוון שהפרויקט מערב
+ מאפיינים פיזיקליים לצד מאפיינים תיכנותיים.
+ האתגר המרכזי שאיתו נדרשנו להתמודד הוא סימולציה כמה שיותר קרובה למציאות
+ של התקן הממריסטור שפורט לעיל ויציקה של המאפיינים הפיזיקליים שלו אל תוך
+ תוך רשתות הנוירונים.
+ בנושא זה נדרשנו להשקיע את מירב זמננו מכיוון שקהילת הקוד פתוח כמעט ולא נוגעת
+ בתחומים אלה והעבודה שנעשתה בכל הנוגע לסימולציה של התקנים פיזיקליים אינה
+ נגישה לשימוש.
+ כמו כן, מכיוון שהשתמשנו בספריות רשתות נוירונים )
+\begin_inset Formula $pytorch$
+\end_inset
+
+( שרגילות למבנה סטדנרטי של רשת, האינטגרציה של שינויים אל תוך הרכיבים הבסיסיים
+ של הרשת היוותה מכשול בדרך להשגת המשימות.
+ בין היתר נדרשנו לשנות ולהתאים אלמנטים בסיסיים כגון נוירונים, סינפסות, פונקציות
+ אקטיבציה ואופן פעולה על מנת להגיע לסימולציה נאמנה למציאות.
+ 
+\begin_inset Newline newline
+\end_inset
+
+קושי נוסף התגלה בעת שהתחלנו לאמן את הרשת על מסדי נתונים.
+ מכיוון שהרשת שהתבקשנו לאמן הורכבה מרכיבים פיזיים בדמות ממריסטורים נדרשנו
+ לעבוד על מערכי התקנים בעלי כמות מוגבלת של רכיבים.
+ בעת שניגשנו לפתור את הבעיה בדמות מערך בעל מספר נמוך של ערכים, נוכחנו לגלות
+ כי סל הבעיות שניתן לפתור בהינתן מערך זה מדולל ולא ניתן להוציא ממנו מסקנות
+ משמעותיות בדבר השימוש ברשתות מבוססות התקני זיכרון.
+ כמו כן, בניגוד לרשתות נוירונים בהם ניתן לגשת לכל נוירון בנפרד, נאלצנו להתמודד
+ על מערך תיכנות ומחיקה של מערך זיכרון שכידוע אופן העבודה בו מערב תיכנות
+ ומחיקה לשורה של רכיבים ולא רכיבים בודדים.
+ כמו כן, בעיה שנובעת מעבודה עם רכיבי זיכרון היא נדיפות המידע הנשמר בהם,
+ באופן טבעי מכיוון שהמידע שנשמר ברכיבי הזיכרון מתבסס על עיקרון של שער צף
+ אלקטרונים אינם נשמרים בצורה הרמטית ובכך גם המתח של רכיב הזיכרון.
+\begin_inset Newline newline
+\end_inset
+
+עוד בנוגע לאופיין הפיזיקלי של ההתקן, בניגוד לרשתות נוירונים בהם שינוי ערך
+ המשקל של הסינפסה מתבצע על ידי שינוי הערך הנומרי של המשקל הנשמר בזיכרון,
+ את תיכנות הרכיבים הפיזקליים נדרש לעשות בפעימות מתח על גבי ההתקן.
+ כך נוצר מצב בו בשלב ה-
+\begin_inset Formula $backpropagation$
+\end_inset
+
+ ושינוי המשקולות נדרשת אלגוריתמיקה נוספת בכדי לשפר את ביצועי הרשת.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
 \end_layout
 
 \begin_layout Section
